Fixed mobile layout issues

--- a/style.css
+++ b/style.css
@@ -461,7 +461,7 @@ Main
 }
   @media (max-width: 70em) {
     .main .gamedesign p {
-      width: 66%;
+      width: 100%;
       padding: 0;
 	  text-align: center;
     }
